--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="keywords" content="книги, рассказы, кувшинов, детские книги, подростковые рассказы">
-        <title>Главная</title>
+        <title>My books</title>
     </head>
     
     <body>
