--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="keywords" content="книги, рассказы, кувшинов, детские книги, подростковые рассказы">
+        <meta name="description" content="Маленький сайт с рассказами и книками">
+        <link rel="stylesheet" href="">
         <title>Главная</title>
     </head>
     
