--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="keywords" content="книги, рассказы, кувшинов, детские книги, подростковые рассказы">
         <meta name="description" content="Маленький сайт с рассказами и книками">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="style.css">
         <title>Главная</title>
     </head>
     
