--- a/Page1.html
+++ b/Page1.html
@@ -5,10 +5,18 @@
         <meta charset="utf-8">
         <meta name="kaywords" content="Страничка">
         <meta name="description" content="Очень краткое описание">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style_P1.css"><!--Сдесь подключен стиль из другого файла-->
     </head>
     
     <body>
         <h1>Вторая страничка</h1>
+        <p>Вот так выглядит таблица:</p>
+        <table border="2">
+            <tr>
+                <td>Это</td>
+                <td>простая</td>
+                <td>таблица</td>
+            </tr>
+        </table>
     </body>
 </html>
